# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2016-01-16 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Change Travis compilation to use 18.2.1 for the 18.x compilation
    * Use only LOG_ERROR_SYNC in cloudi_args_type due to its usage during
      service initialization which can cause a CloudI startup failure
      when a service is misconfigured
    * Improve the debug log format of cloudi_service_http_client
    * Fix cloudi_service_name:suffix/2
    * Fix cloudi_args_type:service_name_suffix/2
    * Fix cloudi_args_type:service_name_pattern_suffix/2
    * Update trie

2016-01-09 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Change the automatic addition of the HTTP header content-disposition
      to be more limited in cloudi_service_http_cowboy
    * Change the default for the set_content_disposition in
      cloudi_service_http_rest to be false

2016-01-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Change cloudi_service_http_cowboy websocket_output
      configuration argument default to (always be) binary (to simplify)
    * Fix JSON-RPC support in cloudi_service_api_requests
    * Fix JSON-RPC CloudI Service API python testing
    * Add nonservice metric for monitoring service requests from
      single Erlang processes using the cloudi module in
      cloudi_service_monitoring
    * Add more validation on {{M, F}} service configuration
      argument function values

2015-12-23 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 1.5.1 released
    * Update elli
    * Compilation fix for 32bit OpenBSD

2015-12-22 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix the Javascript CloudI API for using
      node.js versions greater than v0.12.1
    * Add 1.5.1 request_rate test results

2015-12-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Modify cloudi_service_monitoring to provide incoming and outgoing
      request data with separate metrics